# lbm-hpc-simulator

./: .gitignore  CMakeLists.txt  README.md
data/input/: config.txt  pattern_four_vortex.txt  pattern_offcenter_whisper.txt  sim_long-duration.txt  sim_turbulent.txt  turbulent_asymmetric.txt  turbulent_classic.txt
docs/: Backlog.md
include/: config.h  io.h  lbm_kernels.h  memory.h  types.h
src/: config.c  io.c  lbm_kernels.c  lbm_kernels.hip  main.c  memory.c
